# Impression

./: .gitignore  Cargo.toml  Impression.doap  PRESS.md  README.md  impression.doap  io.gitlab.adhami3310.Impression.json  io.gitlab.adhami3310.impression.json  meson.build  update_translation.sh
build-aux/: dist-vendor.sh
data/: io.gitlab.adhami3310.Impression.desktop.in.in  io.gitlab.adhami3310.Impression.gschema.xml.in  io.gitlab.adhami3310.Impression.metainfo.xml.in.in  io.gitlab.adhami3310.Impression.service.in  io.gitlab.adhami3310.impression.desktop.in.in  io.gitlab.adhami3310.impression.gschema.xml.in  io.gitlab.adhami3310.impression.metainfo.xml.in.in  meson.build
data/resources/: meson.build  resources.gresource.xml  style.css
data/resources/blueprints/: help-overlay.blp  window.blp
po/: LINGUAS  POTFILES.in  ar.po  ca_ES.po  cs.po  de.po  es.po  fi.po  fr.po  hr.po  impression.pot  it.po  ja.po  kab.po  nb.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  sk.po  tr.po  zh_CN.po
src/: application.rs  drag_overlay.rs  flash.rs  main.rs  online.rs  task.rs  window.rs
src/widgets/: device_list.rs
