[package]
name = "impression"
version = "3.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.20"
gtk = { version = "0.9", package = "gtk4", features = [
    "blueprint",
    "gnome_47",
] }
gtk-macros = { version = "0.9", package = "gtk4-macros" }
adw = { version = "0.7", package = "libadwaita", features = ["v1_6"] }
log = "0.4"
once_cell = "1.19"
pretty_env_logger = "0.5"
itertools = "0.13"
ashpd = "0.9"
udisks = { package = "udisks2", version = "0.3.1" }
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "stream", "json"] }
regex = "1.10"
roxmltree = "0.20"
chrono = "0.4"
anyhow = "1.0"
thiserror = "1.0"
derivative = "2.2"
tokio = { version = "1.40", features = ["process", "rt-multi-thread"] }
serde_json = "1.0"
rayon = "1.10"
futures = "0.3"
async-channel = "2.3"
