[package]
name = "impression"
version = "3.5.2"
edition = "2024"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.21"
gtk = { version = "0.10", package = "gtk4", features = [
    "blueprint",
    "gnome_48",
] }
gtk-macros = { version = "0.10", package = "gtk4-macros" }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
log = "0.4"
pretty_env_logger = "0.5"
itertools = "0.14"
ashpd = "0.12"
udisks = { package = "udisks2", version = "0.3.1" }
libc = "0.2"
reqwest = { version = "0.12", features = ["blocking", "stream", "json"] }
roxmltree = "0.21"
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
derivative = "2.2"
tokio = { version = "1.48", features = ["process", "rt-multi-thread"] }
serde_json = "1.0"
rayon = "1.11"
futures = "0.3"
