[package]
name = "impression"
version = "3.5.6"
edition = "2024"
rust-version = "1.88"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = "deny"
wildcard_imports = "allow"
future_not_send = "allow"
cast_precision_loss = "allow"

[dependencies]
gettext-rs = { version = "0.7", features = ["gettext-system"] }
glib = "0.21"
gtk = { version = "0.10", package = "gtk4", features = ["gnome_49"] }
adw = { version = "0.8", package = "libadwaita", features = ["v1_8"] }
log = "0.4"
itertools = "0.14"
ashpd = "0.12"
udisks = { package = "udisks2", version = "0.3.1" }
libc = "0.2"
reqwest = { version = "0.13", default-features = false, features = [
    "native-tls",
    "http2",
    "system-proxy",
    "stream",
    "json",
] }
roxmltree = "0.21"
chrono = "0.4"
thiserror = "2.0"
derivative = "2.2"
tokio = { version = "1.49", features = ["process", "rt-multi-thread"] }
serde_json = "1.0"
rayon = "1.11"
futures = "0.3"
tracing-subscriber = "0.3"
terrors = "0.3"
url = "2.5.8"
